system_with_fixes.log
Traceback (most recent call last):
  File "/root/Trickster/run_claude_system.py", line 26, in <module>
    from ai_religion_architects.orchestration.claude_orchestrator import run_claude_orchestrator
  File "/root/Trickster/ai_religion_architects/orchestration/claude_orchestrator.py", line 1659
    logger.info(f"🎨 Generating sacred images for cycle {self.cycle_count}")
                                                                           ^
IndentationError: unindent does not match any outer indentation level
